--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -4,3 +4,10 @@ $top-line-bg-color: #2f3f54;
 $top-line-text-color: rgba(255, 255, 255, 0.3);
 $light-dark: #2f3f54;
 $blue-main: #2575e7;
+$color_domain: (
+    'com': #2575e7, 
+    'asia': #28aa15, 
+    'online':#ea3700,
+    'me':#0076c8,
+    'cn':#00e2aa
+);
