--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,9 +1,13 @@
 $font-lato: 'Lato', sans-serif;
 $font-roboto: 'Roboto', sans-serif;
+$font-sans: 'Open Sans', sans-serif;
 $top-line-bg-color: #2f3f54;
 $top-line-text-color: rgba(255, 255, 255, 0.3);
 $light-dark: #2f3f54;
 $blue-main: #2575e7;
+$white: #fff;
+$black: #000;
+$shadow-color: rgba(41, 44, 61, 0.15);
 $color_domain: (
     'com': #2575e7, 
     'asia': #28aa15, 
